New/improved animation & text

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -39,6 +39,21 @@
 }
 .btn-feedback.sent {
 	display: block;
+	white-space: normal;
+}
+
+.hero-images:before {
+	content: none;
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+
+.hero-image {
+	vertical-align: top;
+	max-width: 100%;
+	top: 0;
+	margin: 0;
 }
 
 
